force-app/main/default/objects/leaseworks__Operator__c/leaseworks__Operator__c.object-meta.xml
<CustomObject>
    <customHelpPage>leaseworks__DeskComHelpPage</customHelpPage>
    <description>A lessor&apos;s airline customers who operate the leased aircraft or engines</description>
    <label>Z_Unused_OP Operator</label>
    <nameField>
        <label>Z_Unused_OP Operator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Z_Unused_OP Operators</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>