force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__Account_Partner__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Account_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Unused_OP Account Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Operators</relationshipLabel>
    <relationshipName>Operators</relationshipName>
    <type>Lookup</type>
</CustomField>