force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__Address_Street__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Address_Street__c</fullName>
    <label>Z_Unused_OP Address Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>