force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__Airline_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Airline_Type__c</fullName>
    <label>Z_Unused_2103 Airline Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low-Cost Carrier</fullName>
            </value>
            <value>
                <fullName>Full Service</fullName>
            </value>
            <value>
                <fullName>Charter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>