force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__Amount_Granted_Net_Of_Deposit__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Amount_Granted_Net_Of_Deposit__c</fullName>
    <formula>/*Total_Security_Deposit__c -  Total_Rent_Relief_Granted__c*/null</formula>
    <inlineHelpText>Security Deposit - Total Amount Granted</inlineHelpText>
    <label>Z_Unused_OP Amt Granted Net Of Deposit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>