force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__Asset_Age_Preference__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Asset_Age_Preference__c</fullName>
    <label>Z_Unused_OP Asset Age Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>