force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__Average_of_Aircraft_Age__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Average_of_Aircraft_Age__c</fullName>
    <label>Z_Unused_OP Average Age of Aircraft</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>