force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__Billing_Address_Street__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Billing_Address_Street__c</fullName>
    <label>Z_Unused_OP Billing Address Street</label>
    <type>TextArea</type>
</CustomField>