force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__Billing_Country_Lookup__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Billing_Country_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Unused_OP Billing Country</label>
    <referenceTo>leaseworks__Country__c</referenceTo>
    <relationshipLabel>Operators (Billing Country)</relationshipLabel>
    <relationshipName>Operators1</relationshipName>
    <type>Lookup</type>
</CustomField>