force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__Book_Value_M__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Book_Value_M__c</fullName>
    <description>BV = Assets - Liabilities. Tells you about the liquidity of the the company.</description>
    <inlineHelpText>BV = Assets - Liabilities. Tells you about the liquidity of the the company.</inlineHelpText>
    <label>Z_Unused_OP Book Value ($M)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>