force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__City__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__City__c</fullName>
    <label>Z_Unused_OP City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>