force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__Company_Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Company_Logo_URL__c</fullName>
    <description>URL for the company logo. Please create an SFDC Document type with an image of the company&apos;s logo. Then copy the Document&apos;s URL and paste in this text box. The logo will then appear as an image in the Company Logo field.</description>
    <inlineHelpText>URL for the company logo. Please create an SFDC Document type with an image of the company&apos;s logo. Then copy the Document&apos;s URL and paste in this text box. The logo will then appear as an image in the Company Logo field.</inlineHelpText>
    <label>Z_Unused_OP Company Logo URL</label>
    <type>Url</type>
</CustomField>