force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__Contacted_For_AC_Types_gp__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Contacted_For_AC_Types_gp__c</fullName>
    <label>Z_Unused_OP Contacted For Aircraft Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>leaseworks__Aircraft_Group_GLP</valueSetName>
    </valueSet>
</CustomField>