force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__Country_Lookup__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Country_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Unused_OP Country</label>
    <referenceTo>leaseworks__Country__c</referenceTo>
    <relationshipLabel>Z_Unused_OP Operators</relationshipLabel>
    <relationshipName>Operators</relationshipName>
    <type>Lookup</type>
</CustomField>