force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__Country_Of_Registration_Lookup__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Country_Of_Registration_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Unused_OP Country Of Registration</label>
    <referenceTo>leaseworks__Country__c</referenceTo>
    <relationshipLabel>Operators (Country Of Registration)</relationshipLabel>
    <relationshipName>Operators2</relationshipName>
    <type>Lookup</type>
</CustomField>