force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__Effective_Amount_Lost_Total__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Effective_Amount_Lost_Total__c</fullName>
    <label>Z_Unused_OP Effective Amnt Lost(Total)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>