force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__Financial_Year_End__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Financial_Year_End__c</fullName>
    <inlineHelpText>This would be the start date for the FS reporting. The reports will be due annually after this date</inlineHelpText>
    <label>Z_Unused_OP Financial Year End</label>
    <type>Date</type>
</CustomField>