force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__Founded__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Founded__c</fullName>
    <label>Z_Unused_OP Founded</label>
    <length>4</length>
    <type>Text</type>
</CustomField>