force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__IATACode__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__IATACode__c</fullName>
    <label>Z_Unused_OP IATA Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>