force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__ICAOCode__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__ICAOCode__c</fullName>
    <label>Z_Unused_OP ICAO Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>