force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__Internal_Credit_Score_Current_Year__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Internal_Credit_Score_Current_Year__c</fullName>
    <label>Z_Unused_2006 Internal CS(Current Year)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>