force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__Internal_Credit_Score_Last_Year_new__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Internal_Credit_Score_Last_Year_new__c</fullName>
    <inlineHelpText>Internal Credit Score set by the company for the last year</inlineHelpText>
    <label>Z_Unused_2006 Internal CS(Last Year)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>