force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__LTM_2_Rating__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__LTM_2_Rating__c</fullName>
    <label>Z_Unused_OP LTM-2 Rating</label>
    <length>85</length>
    <type>Text</type>
</CustomField>