force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__Marketing_Representative_Contact__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Marketing_Representative_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Marketing representative covering this account</description>
    <inlineHelpText>Marketing representative covering this account</inlineHelpText>
    <label>Z_Unused_2106 Marketing Contact</label>
    <referenceTo>leaseworks__Address__c</referenceTo>
    <relationshipLabel>Z_Unused Operators (Marketing Representative)</relationshipLabel>
    <relationshipName>Ops_Marketing_Rep</relationshipName>
    <type>Lookup</type>
</CustomField>