force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__MR_Billing_Contact_BCC__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MR_Billing_Contact_BCC__c</fullName>
    <inlineHelpText>Email addresses (separated by comma) for the MR invoicing.</inlineHelpText>
    <label>Z_Unused_OP MR Billing Contact(BCC)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>