force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__Net_Cash_M__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Net_Cash_M__c</fullName>
    <description>Net cash available since last reporting quarter/year</description>
    <inlineHelpText>Net cash available since last reporting quarter/year</inlineHelpText>
    <label>Z_Unused_OP Net Cash ($M)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>