force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__Number_Of_Narrow_Bodies__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Number_Of_Narrow_Bodies__c</fullName>
    <label>Z_Unused_OP Number Of Narrow Bodies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>