force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__Operating_Margin__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Operating_Margin__c</fullName>
    <inlineHelpText>Operating income (after sales &amp; marketing and G&amp;A expenses) divided by revenue</inlineHelpText>
    <label>Z_Unused_OP Operating Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>