force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__Operator_Technical_Representative__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Operator_Technical_Representative__c</fullName>
    <label>Z_Unused_OP Opratr Technical Represent</label>
    <length>150</length>
    <type>Text</type>
</CustomField>