force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Opportunity__c</fullName>
    <label>Z_Unused_OP Opportunity</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>