force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__Ownership__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Ownership__c</fullName>
    <label>Z_Unused_OP Ownership</label>
    <length>100</length>
    <type>Text</type>
</CustomField>