force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__Reasons_impacting_the_Intrepid_Rating__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Reasons_impacting_the_Intrepid_Rating__c</fullName>
    <label>Z_Unused_OP Reasons impt Intrnl Rating</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>