force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__Region__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Region__c</fullName>
    <label>Z_Unused_OP Region [Deprecated]</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Latin America and Caribbean</fullName>
            </value>
            <value>
                <fullName>Middle East and Africa</fullName>
            </value>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>Oceania</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>