force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__Revenue_Growth_Last_FY__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Revenue_Growth_Last_FY__c</fullName>
    <inlineHelpText>Rate at which revenue grew in the last three years. If 3 yr period unavailable, shorter period would suffice</inlineHelpText>
    <label>Z_Unused_OP Avg Revenue Grwth(Last 3FY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>