force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__S_P_Rating__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__S_P_Rating__c</fullName>
    <inlineHelpText>S&amp;P Credit Rating</inlineHelpText>
    <label>Z_Unused_OP S&amp;P Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>