force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__Target_calls__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Target_calls__c</fullName>
    <label>Z_Unused_OP Target calls</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>