force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__Tax_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Tax_Registration_Number__c</fullName>
    <label>Z_Unused_OP Tax Registration Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>