force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__Technical_Representative_Contact__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Technical_Representative_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Technical Representative</description>
    <label>Z_Unused_2106 Technical Representative</label>
    <referenceTo>leaseworks__Address__c</referenceTo>
    <relationshipLabel>Z_Unused Operators (Technical Representative)</relationshipLabel>
    <relationshipName>Ops_Tech_Rep</relationshipName>
    <type>Lookup</type>
</CustomField>