force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__Total_Amount_Nt_Due__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Amount_Nt_Due__c</fullName>
    <description>Total value of invoices not yet due for payment</description>
    <formula>/*Y_Hidden_Total_Amount_Not_Due__c*/null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total value of invoices not yet due for payment</inlineHelpText>
    <label>Z_Unused_OP Total Amount Not Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>