force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__Total_Outstnding__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Outstnding__c</fullName>
    <description>Current Total value of invoices outstanding</description>
    <formula>/*Y_Hidden_Total_Amount_Outstanding_1_30__c + Y_Hidden_Total_Amount_Outstanding_31_60__c + Y_Hidden_Total_Amount_Outstanding_61_90__c + Y_Hidden_Total_Amount_Outstanding_90__c*/null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Current Total value of invoices outstanding</inlineHelpText>
    <label>Z_Unused_OP Total Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>