force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__Total_Rent_To_Be_Collected__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Rent_To_Be_Collected__c</fullName>
    <inlineHelpText>Across all Deals - this is the roll up of  Rent Remaining</inlineHelpText>
    <label>Z_Unused_OP Rent Remaning Rqustd Assets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>