force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__Total_Rent_To_Be_Collected_Across_Leases__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Rent_To_Be_Collected_Across_Leases__c</fullName>
    <inlineHelpText>Total Rent To Be Collected across all aircraft with this operator</inlineHelpText>
    <label>Z_Unused_OP Rent Remaning AcrossAllLease</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>