force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__Weakness__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Weakness__c</fullName>
    <label>Z_Unused_OP Weakness</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>