force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__Y_Hidden_AccountID__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_AccountID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created for data migration purpose. It holds the id of the account to which the Operator is migrated to.</description>
    <label>_Account ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Operators ({Account ID})</relationshipLabel>
    <relationshipName>Operators1</relationshipName>
    <type>Lookup</type>
</CustomField>