force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__Y_Hidden_Country__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Country__c</fullName>
    <inlineHelpText>Used to automatically collect text versions of Country Lookup values for this record, so it can be searched on those values (since SFDC does not search on Lookups)</inlineHelpText>
    <label>Z_Unused_OP {Country}</label>
    <length>255</length>
    <type>Text</type>
</CustomField>