force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__Y_Hidden_Total_Cash_Rec_in_Last_30_Days__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Total_Cash_Rec_in_Last_30_Days__c</fullName>
    <label>Z_Unused_OP {Ttl Cash Rec in Last30Day}</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>