force-app/main/default/objects/leaseworks__Operator__c/fields/leaseworks__Y_Hidden_Total_MR_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Total_MR_Invoice_Amount__c</fullName>
    <label>Z_Unused_OP {Total MR Invoice Amount}</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>