force-app/main/default/objects/leaseworks__Operator__c/validationRules/leaseworks__CheckDuplicateOnName.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__CheckDuplicateOnName</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
OR( 
ISNEW(), 
ISCHANGED( Name )
), 
NOT( 
ISBLANK ( 
VLOOKUP( $ObjectType.leaseworks__Operator__c.Fields.Name, $ObjectType.leaseworks__Operator__c.Fields.Name,  Name )
)
)
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Operator name already exists.</errorMessage>
</ValidationRule>