force-app/main/default/objects/leaseworks__Operator__c/validationRules/leaseworks__Valid_Year_Founded.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Valid_Year_Founded</fullName>
    <active>true</active>
    <errorConditionFormula>AND( !ISBLANK(leaseworks__Founded__c)  , OR(!ISNUMBER(leaseworks__Founded__c), VALUE(leaseworks__Founded__c )&lt;1900, VALUE(leaseworks__Founded__c )&gt;YEAR(TODAY())))</errorConditionFormula>
    <errorDisplayField>leaseworks__Founded__c</errorDisplayField>
    <errorMessage>Invalid year.</errorMessage>
</ValidationRule>