force-app/main/default/objects/leaseworks__Operator__c/listViews/leaseworks__All.listView-meta.xml
<ListView>
    <fullName>leaseworks__All</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__City__c</columns>
    <columns>leaseworks__Country__c</columns>
    <columns>leaseworks__Number_of_aircraft__c</columns>
    <columns>leaseworks__Revenue__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>